Fix nullptr crash: srcImage may not exist when deep-copying layers

BUG:458115